--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              {"glob": "**","input": "src/assets","output": "./assets"}
+              {"glob": "**/*","input": "src/assets","output": "./assets"}
             ],
             "styles": [
               "src/styles.scss",
